src/objects/Practice_Area__c.object
<CustomObject>
    <description>Practice Areas</description>
    <fields>
        <fullName>CC_Description__c</fullName>
        <label>CC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Parent_Practice_Area_Id__c</fullName>
        <label>CC Parent Practice Area Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Practice_Area_Id__c</fullName>
        <externalId>true</externalId>
        <label>CC Practice Area Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CC_Safe_Description__c</fullName>
        <label>CC Safe Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Practice_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Practice Area</label>
        <referenceTo>Practice_Area__c</referenceTo>
        <relationshipLabel>Child Practice Areas</relationshipLabel>
        <relationshipName>Practice_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Practice Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Practice_Area__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CC_Practice_Area_Id__c</columns>
        <columns>CC_Parent_Practice_Area_Id__c</columns>
        <columns>CC_Description__c</columns>
        <columns>CC_Safe_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Practice Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practice Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>